Dolphin plugin: build by default

--- a/shell_integration/CMakeLists.txt
+++ b/shell_integration/CMakeLists.txt
@@ -1,7 +1,17 @@
-add_subdirectory(MacOSX)
+if (APPLE)
+  add_subdirectory(MacOSX)
+endif()
 add_subdirectory(icons)
 
 if( UNIX AND NOT APPLE )
   add_subdirectory(nautilus)
-endif()
 
+  find_package(ECM 1.2.0 CONFIG QUIET)
+  set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH} ${ECM_KDE_MODULE_DIR} "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+  find_package(KF5 "5.16" COMPONENTS KIO)
+  if(KF5_FOUND)
+    add_subdirectory(dolphin)
+  else()
+    message("Dolhin plugin disabled: KDE Frameworks 5.16 not found")
+  endif()
+endif()
